--- a/index.html
+++ b/index.html
@@ -44,26 +44,26 @@
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <img src="picture-layer3" alt="Слайд с изображением телефона и планшета">
          </div>
-        <a class="btn" href="#">Узнать больше</a>
+        <a class="btn" href="#"><span class="know-more">Узнать больше</span></a>
     </section>
        <section class="services">
            <article class="site">
                <a href="#"><img src="img\site-logo.png" alt="Веб-сайты" width="300" height="146"></a>
                <h2 class="services-text">Веб-сайты</h2>
                <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-               <button class="btn-order-site" type="button">Заказать</button>
+               <button class="btn-order-site" type="button"><span class="know-more">Заказать</span></button>
            </article>
            <article class="apps">
                <a href="#"><img src="img\apps-logo.png" alt="Приложения" width="300" height="146"></a>
                <h2 class="services-text">Приложения</h2>
                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-               <button class="btn-order-apps"type="button">Заказать</button>
+               <button class="btn-order-apps"type="button"><span class="know-more">Заказать</span></button>
            </article>
            <article class="presentations">
                <a href="#"><img src="img\presentations-logo.png" alt="Презентации" width="300" height="146"></a>
                <h2 class="services-text">Презентации</h2>
                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-               <button class="btn-order-presentations" type="button">Заказать</button>
+               <button class="btn-order-presentations" type="button"><span class="know-more">Заказать</span></button>
            </article>
        </section>
           <article class="about-us">
@@ -95,10 +95,10 @@
           </article>
     <div class="examples">
         <ul class="ground-navigation">
-            <li><a href="#"> <img src="img\logo-1-min.png" alt="HTML академия" width="199" height="68"> </a></li>
-            <li><a href="#"> <img src="img\logo-2-min.png" alt="Барбершоп" width="209" height="90"> </a></li>
-            <li><a href="#"> <img src="img\logo-3-min.png" alt="Пинк" width="185" height="52"> </a></li>
-            <li><a href="#"> <img src="img\logo-4-min.png" alt="Мишка" width="173" height="84"> </a></li>
+            <li><a href="#"> <img src="img\logo-1-min.png" alt="HTML академия" width="199" height="68" class="ground-navigation-logo"> </a></li>
+            <li><a href="#"> <img src="img\logo-2-min.png" alt="Барбершоп" width="209" height="90"class="ground-navigation-logo"> </a></li>
+            <li><a href="#"> <img src="img\logo-3-min.png" alt="Пинк" width="185" height="52" class="ground-navigation-logo"> </a></li>
+            <li><a href="#"> <img src="img\logo-4-min.png" alt="Мишка" width="173" height="84"class="ground-navigation-logo"> </a></li>
         </ul>
     </div>
     
@@ -131,9 +131,9 @@
              <h4 class="write-us-head">Напишите нам</h4>
             <form class="write-form" action="https://https://echo.htmlacademy.ru" method="post">
                 <label for="write-form-name">Ваше имя:</label>
-                <input type="text" name="name" id="write-form-name" value="Ваше имя" placeholder="Имя Фамилия" required>
+                <input type="text" name="name" id="write-form-name" placeholder="Имя Фамилия" required class="enter-your-name">
                 <label for="write-form-email">Ваш e-mail:</label>
-                <input type="e-mail" name="email" id="write-form-email" value="Ваша почта" method="post" placeholder="email@example.com" required>
+                <input type="e-mail" name="email" id="write-form-email" method="post" placeholder="email@example.com" required class="enter-your-name">
                 <label for="write-form-letter">Текст письма:</label>
                 <textarea id="write-form-letter" name="letter" rows="5" placeholder="В свободной форме"></textarea>
                 <button class="btn" type="submit" value="Отправить" tabindex="0"></button>
