--- a/catalog.html
+++ b/catalog.html
@@ -30,11 +30,11 @@
           <div class="sort">
               <p class="choise">Сортировать:</p>
               <ul class="options">
-                  <li><a href="#">по цене</a></li>
-                  <li><a href="#">по типу</a></li>
-                  <li><a href="#">по названию</a></li>
-                  <li><a href="#" class="gradation-btn"> По убыванию </a></li>
-                  <li><a href="#" class="gradation-btn"> По возрастанию</a></li>
+                  <li><a href="#" class="options-item">по цене</a></li>
+                  <li><a href="#" class="options-item">по типу</a></li>
+                  <li><a href="#" class="options-item">по названию</a></li>
+                  <li><a href="#" class="gradation-btn options-item"> По убыванию </a></li>
+                  <li><a href="#" class="gradation-btn options-item"> По возрастанию</a></li>
               </ul>
         </div>
           <section class="filters">
@@ -51,15 +51,15 @@
                   <legend class="visually-hidden">Выбрать сетку сайта</legend>
                   <span class="choise-grid-value">Сетка:</span>
                   <ul class="grid-features-text">
-                      <li>
+                      <li class="grid-features-text-item">
                         <input type="radio" name="grid-choise" value="adaptive" checked id="adaptive">
                         <label for="adaptive">Адаптивная </label>
                       </li>
-                      <li>
+                      <li class="grid-features-text-item">
                         <input type="radio" name="grid-choise" value="fixed" id="fixed">
                         <label for="fixed">Фиксированная</label>
                       </li>
-                      <li>
+                      <li class="grid-features-text-item">
                         <input type="radio" name="grid-choise" value="gum" id="gum">
                         <label for="gum">Резиновая</label> 
                       </li>
@@ -92,7 +92,7 @@
                      </li>
                   </ul>
                 </fieldset>
-              <button class="coast-value-submit"type="submit">Показать</button>
+              <button class="coast-value-submit"type="submit"><span class="value-submit-text">Показать</span></button>
              </form> 
           </section>
           
@@ -170,10 +170,10 @@
           
         <div class="catalog-navigation">
            <ul class="catalog-btn">
-            <li><a class="catalog-btn-page">1</a></li>
-            <li><a class="catalog-btn-page">2</a></li>
-            <li><a class="catalog-btn-page" >3</a></li>
-            <li><a class="catalog-btn-page" > СЛЕДУЮЩАЯ </a></li>
+            <li><a class="catalog-btn-page"><span class="know-more">1</span></a></li>
+               <li><a class="catalog-btn-page"><span class="know-more">2</span></a></li>
+               <li><a class="catalog-btn-page" ><span class="know-more">3</span></a></li>
+               <li><a class="catalog-btn-page" > <span class="know-more">СЛЕДУЮЩАЯ </span></a></li>
         </ul>
           </div>
       </main>
